tests/snapshots/binary__plain_ansi.snap
---
source: tests/binary.rs
expression: snapshot(&output)
---
exit: 0
--- stdout ---
second & value
third \\ {value}<EOF>
--- stderr ---
<EOF>
