tests/snapshots/binary__plain_html.snap
---
source: tests/binary.rs
expression: snapshot(&output)
---
exit: 0
--- stdout ---
second &amp; value
third \\ {value}<EOF>
--- stderr ---
<EOF>
